--- a/src/Pages/Workexp/Workexp.css
+++ b/src/Pages/Workexp/Workexp.css
@@ -9,21 +9,27 @@
     padding:30px 0px;
 } */
 .work-exp hr{
-    width:400px;
+    width:200px;
     margin: 10px auto;
-    color:#138781;
+    color:rgb(62 177 197);
 }
 
-.work-exp h2{
+.work-exp h4{
     font-weight:bold;
-    color:#1e1e2c;
+    color:rgb(62 177 197);
+    font-family:cursive;
 }
 .work-exp.vertical-timeline-element-title{
-    color:#138781;
+    color:rgb(62 177 197);
+
 
 }
+
 .work-exp .vertical-timeline-element-subtitle{
-    color:#1e1e2c60;
+    color:#30304460;
+    
+   
+
 }
 
 @media (max-width:600px){
