--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,19 +1,31 @@
 .home-container{
     color:white;
     /* margin-left:150px; */
-    height:300px;
+    height:330px;
 }
 
-.home-content h2{
+.home-content h4{
+
+    
     margin-top:30px;
     padding-top:70px;
     padding:10px;
-    padding-left:150px;
+    padding-left:150px; 
 }
-.home-content h1{
-    color:#e0b50f;
+.home-content p{
+    margin-top:-18px;
+    padding-top:70px;
+    padding:10px;
+    font-size:50px;
+    padding-left:150px;
+    font-weight:500;
+
+}
+.home-content h2{
+    margin-top:-20px;
     margin-left:150px;
     padding:10px;
+
 }
 .home-buttons{
     margin-left:150px;
@@ -91,3 +103,7 @@
     }
   
 }
+
+/* .Typewriter{
+    color:"blue";
+} */
