--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -3,14 +3,15 @@
 }
 
 .project hr{
-    width:400px;
+    width:200px;
     margin: 10px auto;
-    color:#138781;
+    color:rgb(62 177 197);
 }
 
-.project h2{
+.project h4{
     font-weight:bold;
-    color:#138781;
+    color:rgb(62 177 197);
+    font-family:cursive;
 }
 
 #ads{
@@ -56,7 +57,7 @@
     height:40px;
     display:block;
     text-align:center;
-    background-color:#138781;
+    background-color:rgb(62 177 197);
     color:white;
     border-radius:80px;
     font-size: 16px;
@@ -78,7 +79,7 @@
 }
 .ad-btn:hover{
     background-color:white;
-    color:#138781;
+    color:rgb(62 177 197);
     background:transparent;
     border:2px solid #138781;
     transition:all 0.5s ease;
